--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               timely project completion</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img-1.png" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -128,7 +128,7 @@
               atmosphere, as we share our commitment to exceptional service and unforgettable dining experiences</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img-1.png" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -144,7 +144,7 @@
               gear.</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img-1.png" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -160,7 +160,7 @@
               what you're looking for.</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img-1.png" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -175,7 +175,7 @@
               unbiased, and thought-provoking news that keeps you informed and engaged.</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img-1.png" alt="img">
           </div>
         </div>
       </div>
@@ -188,7 +188,7 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="./img/img-3.png.jpg" alt="img">
+          <img src="./img-3.png.jpg" alt="img">
         </div>
       </div>
       <div class="col-right">
